Complete backend of the Memories project

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 CONNECTION_URL = mongodb+srv://admin:iYOdXHKP4QevlIqv@cluster0.n62ld.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+SECRET_STRING = test
